--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Empresa dedicada a la inovación médica">
     <meta name="keywords" content="genetica, cromosomas, investigacion, ciencia">
     <meta name="author" content="Xavier Lliteras">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta property="og:title" content="Regenite a company with future">
     <meta property="og:description" content="We are a nonprofit organization, our goal is to investigate genetics">
     <meta property="og:image" content="img/iceland.jpg">
@@ -68,7 +69,7 @@
                                 <p class="text-1 pt-15 text-shadow">We are currently researching viruses to cure
                                     diseases.
                                 </p>
-                                <a class="btn btn-primary">Learn More</a>
+                                <a href="new-7.html" class="btn btn-primary">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -94,7 +95,7 @@
                                 <p class="text-1 pt-15 text-shadow">Discover the latest investigations in dna
                                     restoration
                                     and technologies available in 2021.</p>
-                                <a class="btn btn-primary">Show More</a>
+                                <a href="new-6.html" class="btn btn-primary">Show More</a>
                             </div>
                         </div>
                     </div>
@@ -146,12 +147,9 @@
                         <img src="img/scientist.jpg" alt="laboratory-image">
                     </div>
                     <div class="card__footer">
-                        <h3 class="title-2">Genetic cancer fixed in mice</h3>
-                        <p class="text-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur eum
-                            minima maxime, dolore, eligendi doloribus placeat eos perferendis reiciendis dolorum ullam
-                            aliquam tempora iste quidem? Esse corrupti cum ullam doloribus tempora!
-                            Obcaecati saepe est doloribus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
-                            alias quas dicta quaerat, .</p>
+                        <h3 class="title-2"><a href="new-3.html">Nano carriers fit for purpose</a></h3>
+                        <p class="text-2">A new approach to send 'friendly' nano-particles into a patient's blood stream has shown promising results by modifying the surface of these potential drug, vaccine or cancer treatment delivery objects to encourage the best result.
+                        </p>
                     </div>
                 </div>
                 <div class="card">
@@ -159,12 +157,8 @@
                         <img src="img/cells.jpg" alt="laboratory-image">
                     </div>
                     <div class="card__footer">
-                        <h3 class="title-2">Genetic cancer fixed in mice</h3>
-                        <p class="text-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur eum
-                            minima maxime, dolore, eligendi doloribus placeat eos perferendis reiciendis dolorum ullam
-                            aliquam tempora iste quidem? Esse corrupti cum ullam doloribus tempora!
-                            Obcaecati . Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod impedit possimus
-                            aliquam error molestias dolorem unde.
+                        <h3 class="title-2"><a href="new-4.html">Scientists 'supercharge' cancer-fighting T cells</a></h3>
+                        <p class="text-2">Yale scientists have identified a way to "supercharge" tumor-attacking T cells, a finding that may not only improve the effectiveness of a promising type of cell-based cancer immunotherapy but also expand the number of cancers it can treat.
                         </p>
                     </div>
                 </div>
@@ -173,13 +167,8 @@
                         <img src="img/carousel_21.jpg" alt="laboratory-image">
                     </div>
                     <div class="card__footer">
-                        <h3 class="title-2">Genetic cancer fixed in mice</h3>
-                        <p class="text-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur eum
-                            minima maxime, dolore, eligendi doloribus placeat eos perferendis reiciendis dolorum ullam
-                            aliquam tempora iste quidem? Esse corrupti cum ullam doloribus tempora!
-                            Obcaecati saepe . Lorem ipsum dolor. Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit.
-                            Possimus, officia.</p>
+                        <h3 class="title-2"><a href="new-5.html">Laser flashes for cancer research</a></h3>
+                        <p class="text-2">Irradiation with fast protons is a more effective and less invasive cancer treatment than X-rays. However, modern proton therapy requires large particle accelerators, which has experts investigating alternative accelerator concepts, such as laser systems to accelerate protons. Such systems are deployed in preclinical studies to pave the way for optimal radiation therapy.</p>
                     </div>
                 </div>
             </div>
@@ -220,17 +209,12 @@
                             <img src="img/trees.jpg" alt="Imagen de marca">
                         </div>
                         <div class="flex-item">
-                            <h2 class="title">Intestinal flora is important for the development.</h2>
+                            <h2 class="title">Forest restoration trade offs.</h2>
                             <img src="img/Title-border.png" alt="border">
-                            <p class="text-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolor
-                                doloribus asperiores explicabo! Est, commodi! Possimus, impedit corporis quidem quae
-                                accusamus quis excepturi ipsa eum accusantium deserunt! Voluptas, voluptatem nobis.
+                            <p class="text-1">Forest restoration schemes should prioritise restoring native forests for greatest climate and environmental benefits, but these benefits incur a trade-off with wood production in comparison with tree plantations.
                             </p>
-                            <p class="text-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolor
-                                exercitationem magni, incidunt itaque quae asperiores impedit consequuntur atque in non
-                                laborum, nostrum dolore accusamus laudantium molestias! Dignissimos, consequuntur
-                                asperiores.</p>
-                            <button type="button" class="btn btn-primary">Read More</button>
+                            <p class="text-1">The study looked at the relative benefits of restoring native forests versus establishing a range of simple tree plantations in terms of biodiversity conservation and four key functions of value to humans...</p>
+                            <a href="new-2.html" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
                     <div class="news__new flex">
@@ -239,17 +223,12 @@
                             <img src="img/bacteria.jpg" alt="Imagen de marca">
                         </div>
                         <div class="flex-item">
-                            <h2 class="title">Intestinal flora is important for the development.</h2>
+                            <h2 class="title">365 million year old trilobites show first signs of molting.</h2>
                             <img src="img/Title-border.png" alt="border">
-                            <p class="text-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolor
-                                doloribus asperiores explicabo! Est, commodi! Possimus, impedit corporis quidem quae
-                                accusamus quis excepturi ipsa eum accusantium deserunt! Voluptas, voluptatem nobis.
+                            <p class="text-1">Trilobites were some of the most dominant creatures on the face of the planet, thriving from the mid Cambrian 521 million years ago to the start of the Mesozoic, 250 million years ago. Paleontologists have now found the earliest evidence for molting - a trilobite shedding its skin 365 million years ago.
                             </p>
-                            <p class="text-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolor
-                                exercitationem magni, incidunt itaque quae asperiores impedit consequuntur atque in non
-                                laborum, nostrum dolore accusamus laudantium molestias! Dignissimos, consequuntur
-                                asperiores.</p>
-                            <button type="button" class="btn btn-primary">Read More</button>
+                            <p class="text-1">Fossils can reveal many things about an ancient environment; they can help you date it, they can reveal how the climate was shaping up, and they can demonstrate a particular behavior frozen in time, as is the case with the piece of shale Błażej Błażejowski excavated...</p>
+                            <a href="new-1.html" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
                     <div class="news__new flex">
@@ -257,17 +236,12 @@
                             <img src="img/trees.jpg" alt="Imagen de marca">
                         </div>
                         <div class="flex-item">
-                            <h2 class="title">Intestinal flora is important for the development.</h2>
+                            <h2 class="title">Forest restoration trade offs.</h2>
                             <img src="img/Title-border.png" alt="border">
-                            <p class="text-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolor
-                                doloribus asperiores explicabo! Est, commodi! Possimus, impedit corporis quidem quae
-                                accusamus quis excepturi ipsa eum accusantium deserunt! Voluptas, voluptatem nobis.
+                            <p class="text-1">Forest restoration schemes should prioritise restoring native forests for greatest climate and environmental benefits, but these benefits incur a trade-off with wood production in comparison with tree plantations.
                             </p>
-                            <p class="text-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolor
-                                exercitationem magni, incidunt itaque quae asperiores impedit consequuntur atque in non
-                                laborum, nostrum dolore accusamus laudantium molestias! Dignissimos, consequuntur
-                                asperiores.</p>
-                            <button type="button" class="btn btn-primary">Read More</button>
+                            <p class="text-1">The study looked at the relative benefits of restoring native forests versus establishing a range of simple tree plantations in terms of biodiversity conservation and four key functions of value to humans...</p>
+                            <a href="new-2.html" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
                     <div class="news__new flex">
@@ -276,17 +250,12 @@
                             <img src="img/bacteria.jpg" alt="Imagen de marca">
                         </div>
                         <div class="flex-item">
-                            <h2 class="title">Intestinal flora is important for the development.</h2>
+                            <h2 class="title">365 million year old trilobites show first signs of molting.</h2>
                             <img src="img/Title-border.png" alt="border">
-                            <p class="text-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolor
-                                doloribus asperiores explicabo! Est, commodi! Possimus, impedit corporis quidem quae
-                                accusamus quis excepturi ipsa eum accusantium deserunt! Voluptas, voluptatem nobis.
+                            <p class="text-1">Trilobites were some of the most dominant creatures on the face of the planet, thriving from the mid Cambrian 521 million years ago to the start of the Mesozoic, 250 million years ago. Paleontologists have now found the earliest evidence for molting - a trilobite shedding its skin 365 million years ago.
                             </p>
-                            <p class="text-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolor
-                                exercitationem magni, incidunt itaque quae asperiores impedit consequuntur atque in non
-                                laborum, nostrum dolore accusamus laudantium molestias! Dignissimos, consequuntur
-                                asperiores.</p>
-                            <button type="button" class="btn btn-primary">Read More</button>
+                            <p class="text-1">Fossils can reveal many things about an ancient environment; they can help you date it, they can reveal how the climate was shaping up, and they can demonstrate a particular behavior frozen in time, as is the case with the piece of shale Błażej Błażejowski excavated...</p>
+                            <a href="new-1.html" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
                 </div>
