--- a/new-1.html
+++ b/new-1.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Regenite a company with future">
     <meta property="og:description" content="We are a nonprofit organization, our goal is to investigate genetics">
     <meta property="og:image" content="img/iceland.jpg">
-    <link type="text/css" rel="stylesheet" href="css/donate.css">
+    <link type="text/css" rel="stylesheet" href="css/news.css">
     <script src="js/utilities.js" defer></script>
 </head>
 
@@ -108,86 +108,74 @@
             </div>
         </section>
 
-        <!--*********************Donation section*************************-->
-        <section class="donate padding">
-            <div class="container flex">
-                <div class="donate__decoration">
-                    <img src="img/donate.jpg" alt="donate">
-                    <div class="donate__text">
-                        <h2 class="title">Make a donation</h2>
-                        <p class="donate__paragraph">We can't thank you enough for all the donations we've been reciving, we're
-                        investing a lot of money in the development of revolutionary technology.
-                        </p>
-                        <p class="donate__paragraph">Your support will help us in our mission to investigate new technologies. Every little effort matters and with the support of everyone we can build amazing things!</p>
-                    </div>
+        <!--*********************New Section*********************-->
+        <section class="new padding">
+            <div class="container">
+                <div class="new__image">
+                    <figure>
+                        <img src="img/trilobite.jpg" alt="">
+                        <figcaption>An image of a trilobite</figcaption>
+                    </figure>
+                    
                 </div>
-                <form class="donate__controls flex-item">
-                    <h2 class="title donate__title"><img src="img/hand.svg" alt="">Donate</h2>
-                    <h3>I am an</h3>
-                    <div class="donate__organization flex">
-                        <button type="button" class="btn btn-primary">Individual</button>
-                        <button type="button" class="btn">Organization</button>
-                    </div>
-                    <h3>Donation amount</h3>
-                    <div class="donate__amount">
-                        <button type="button" class="btn btn-primary">5$</button>
-                        <button type="button" class="btn">10$</button>
-                        <button type="button" class="btn">20$</button>
-                        <button type="button" class="btn">50$</button>
-                        <button type="button" class="btn">100$</button>
-                        <button type="button" class="btn">250$</button>
-                        <button type="button" class="btn">500$</button>
-                        <input type="text" placeholder="Other amount" class="donate__input">
-                        <input type="submit" class="btn" value="Donate">
-                    </div>
-                </form>
+                <div class="new__text">
+                    <h2 class="title new__title">365 million year old trilobites show first signs of molting</h2>
+                    <p class="first-paragraph">Trilobites were some of the most dominant creatures on the face of the planet, thriving from the mid Cambrian 521 million years ago to the start of the Mesozoic, 250 million years ago. Paleontologists have now found the earliest evidence for molting – a trilobite shedding its skin 365 million years ago.</p>
+                    <p>Fossils can reveal many things about an ancient environment; they can help you date it, they can reveal how the climate was shaping up, and they can demonstrate a particular behavior frozen in time, as is the case with the piece of shale Błażej Błażejowski excavated. Błażejowski based out of the Institute of Paleobiology at the Polish Academy of Sciences, was working on the Kowala Quarry in Poland’s Holy Cross Mountains when he found this special trilobite.
+                    </p>
+                    <p>The trilobite, looking like a big armored bug, was caught in the act of shedding its exoskeleton, a process called molting. Molting refers to an animal routinely casts off a part of its body (often, but not always, an outer layer or covering), either at specific times of the year, or at specific points in its life cycle. Cats do it with their fur, snakes do it with their skin, and chicken do it with their features, but more remarkably, some insects do it with their entire exoskeleton, basically ripping themselves out of their bodies in an alien-like fashion. Błażejowski quickly understood this was also what his trilobite was going through.
+                    </p>
+                    <p>Subsequent X-ray analysis confirmed his initial theory and revealed even more information about the fossil. The creature is a Trimerocephalus, an eyeless trilobite roughly 6.3 inches long and 3 inches wide that lived towards the end of the Devonian. Unfortunately for this specimen, the process seems to have killed him.
+                    </p>
+                    <p>The fact that such a complex process emerged so long ago is not a surprise, as paleontologists suspected trilobites molted just like modern insects, but finding a fossil that actually captures the process is quite fortunate.
+                    </p>
+                </div>
             </div>
         </section>
+    </main>
 
-        <!--FOOTER-->
-        <footer class="footer">
-            <div class="container grid">
-                <div class="grid-item">
-                    <div class="footer__container">
-                        <img src="img/logo.svg" class="footer__logo" alt="logo">
-                        <p>875 - 321 - 123</p>
-                        <p>regenite@gmail.com</p>
-                        <p>102 Carrer de sa ma, 07100</p>
-                    </div>
+     <!--FOOTER-->
+     <footer class="footer">
+        <div class="container grid">
+            <div class="grid-item">
+                <div class="footer__container">
+                    <img src="img/logo.svg" class="footer__logo" alt="logo">
+                    <p>875 - 321 - 123</p>
+                    <p>regenite@gmail.com</p>
+                    <p>102 Carrer de sa ma, 07100</p>
+                </div>
 
+            </div>
+            <div class="grid-item">
+                <div class="footer__container ">
+                    <h3>Schedule</h3>
+                    <p>Monday : 8am - 5pm</p>
+                    <p>Friday : 9am - 6pm</p>
+                    <p>Sunday : 10am - 05pm</p>
                 </div>
-                <div class="grid-item">
-                    <div class="footer__container ">
-                        <h3>Schedule</h3>
-                        <p>Monday : 8am - 5pm</p>
-                        <p>Friday : 9am - 6pm</p>
-                        <p>Sunday : 10am - 05pm</p>
-                    </div>
-                </div>
-                <div class="grid-item">
-                    <div class="footer__container ">
-                        <h3>Contact</h3>
-                        <p>regenite@gmail.com</p>
-                        <p>Tlf: 623134212</p>
-                        <div class="footer__redes">
-                            <a href="https://www.instagram.com" target="_blank">
-                                <img src="img/logo-instagram.svg" alt="logo-instagram" class="footer__img">
-                            </a>
-                            <a href="https://www.twitter.com" target="_blank">
-                                <img src="img/logo-twitter.svg" alt="logo-twitter" class="footer__img">
-                            </a>
-                            <a href="https://www.facebook.com" target="_blank">
-                                <img src="img/facebook.svg" alt="logo-facebook" class="footer__img">
-                            </a>
-                        </div>
+            </div>
+            <div class="grid-item">
+                <div class="footer__container ">
+                    <h3>Contact</h3>
+                    <p>regenite@gmail.com</p>
+                    <p>Tlf: 623134212</p>
+                    <div class="footer__redes">
+                        <a href="https://www.instagram.com" target="_blank">
+                            <img src="img/logo-instagram.svg" alt="logo-instagram" class="footer__img">
+                        </a>
+                        <a href="https://www.twitter.com" target="_blank">
+                            <img src="img/logo-twitter.svg" alt="logo-twitter" class="footer__img">
+                        </a>
+                        <a href="https://www.facebook.com" target="_blank">
+                            <img src="img/facebook.svg" alt="logo-facebook" class="footer__img">
+                        </a>
                     </div>
                 </div>
             </div>
-            <div class="subfooter flex">
-                <span>@Copyright 2021 - Xavier Lliteras</span>
-            </div>
+        </div>
+        <div class="subfooter flex">
+            <span>@Copyright 2021 - Xavier Lliteras</span>
+        </div>
 
-        </footer>
+    </footer>
 </body>
-
-</html>
