--- a/new-2.html
+++ b/new-2.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Regenite a company with future">
     <meta property="og:description" content="We are a nonprofit organization, our goal is to investigate genetics">
     <meta property="og:image" content="img/iceland.jpg">
-    <link type="text/css" rel="stylesheet" href="css/donate.css">
+    <link type="text/css" rel="stylesheet" href="css/news.css">
     <script src="js/utilities.js" defer></script>
 </head>
 
@@ -108,86 +108,78 @@
             </div>
         </section>
 
-        <!--*********************Donation section*************************-->
-        <section class="donate padding">
-            <div class="container flex">
-                <div class="donate__decoration">
-                    <img src="img/donate.jpg" alt="donate">
-                    <div class="donate__text">
-                        <h2 class="title">Make a donation</h2>
-                        <p class="donate__paragraph">We can't thank you enough for all the donations we've been reciving, we're
-                        investing a lot of money in the development of revolutionary technology.
-                        </p>
-                        <p class="donate__paragraph">Your support will help us in our mission to investigate new technologies. Every little effort matters and with the support of everyone we can build amazing things!</p>
-                    </div>
+        <!--*********************New Section*********************-->
+        <section class="new padding">
+            <div class="container">
+                <div class="new__image">
+                    <figure>
+                        <img src="img/trees.jpg" alt="">
+                        <figcaption>An image of our trees</figcaption>
+                    </figure>
                 </div>
-                <form class="donate__controls flex-item">
-                    <h2 class="title donate__title"><img src="img/hand.svg" alt="">Donate</h2>
-                    <h3>I am an</h3>
-                    <div class="donate__organization flex">
-                        <button type="button" class="btn btn-primary">Individual</button>
-                        <button type="button" class="btn">Organization</button>
-                    </div>
-                    <h3>Donation amount</h3>
-                    <div class="donate__amount">
-                        <button type="button" class="btn btn-primary">5$</button>
-                        <button type="button" class="btn">10$</button>
-                        <button type="button" class="btn">20$</button>
-                        <button type="button" class="btn">50$</button>
-                        <button type="button" class="btn">100$</button>
-                        <button type="button" class="btn">250$</button>
-                        <button type="button" class="btn">500$</button>
-                        <input type="text" placeholder="Other amount" class="donate__input">
-                        <input type="submit" class="btn" value="Donate">
-                    </div>
-                </form>
+                <div class="new__text">
+                    <h2 class="title new__title">Forest restoration must navigate trade-offs between environmental and wood production goals</h2>
+                    <p class="first-paragraph">Forest restoration schemes should prioritise restoring native forests for greatest climate and environmental benefits, but these benefits incur a trade-off with wood production in comparison with tree plantations.</p>
+
+                    <p>Diverse native forests store more above-ground carbon, provide more water to nearby streams, and better support biodiversity and prevent soil erosion than simple tree plantations, a major new study published today in the journal Science has found -- but plantations have an advantage in wood production.
+                    </p>
+                    <p>The study looked at the relative benefits of restoring native forests versus establishing a range of simple tree plantations in terms of biodiversity conservation and four key functions of value to humans -- or 'ecosystem services' -- provided by a forest: carbon storage, soil erosion control, water provisioning, and wood production.
+                    </p>
+                    <p>Forest restoration is gathering pace worldwide, in part as a way to tackle climate change: deforestation is a major source of carbon emissions, and forest restoration can be a 'nature-based climate solution' to counter global warming. In many cases, forest restoration is also conducted for the water provisioning and flood regulation functions of forests, and as a means to prevent soil erosion and produce wood products.
+                    </p>
+                    <p>"Establishing a tree plantation is useful for producing wood -- but not so good for restoring biodiversity. This is a huge missed opportunity for conservation," said Dr Fangyuan Hua, a researcher previously based in the University of Cambridge's Department of Zoology, and first author of the paper. Hua now works at Peking University's Institute of Ecology in China.
+                    </p>
+                    <p>She added: "When the goal of a forest restoration scheme includes wood production, then there's a trade-off to be made between environmental and production outcomes."</p>
+                    <p>
+                        Forest restoration schemes aimed at providing ecosystem services tend to involve tree plantations of just one or a small number of tree species, rather than the restoration of diverse native forests, based on an implicit assumption that tree plantations are just as effective in delivering these services. But the authors say there is no robust scientific evidence for this.
+                    </p>
+                </div>
             </div>
         </section>
+    </main>
 
-        <!--FOOTER-->
-        <footer class="footer">
-            <div class="container grid">
-                <div class="grid-item">
-                    <div class="footer__container">
-                        <img src="img/logo.svg" class="footer__logo" alt="logo">
-                        <p>875 - 321 - 123</p>
-                        <p>regenite@gmail.com</p>
-                        <p>102 Carrer de sa ma, 07100</p>
-                    </div>
+     <!--FOOTER-->
+     <footer class="footer">
+        <div class="container grid">
+            <div class="grid-item">
+                <div class="footer__container">
+                    <img src="img/logo.svg" class="footer__logo" alt="logo">
+                    <p>875 - 321 - 123</p>
+                    <p>regenite@gmail.com</p>
+                    <p>102 Carrer de sa ma, 07100</p>
+                </div>
 
+            </div>
+            <div class="grid-item">
+                <div class="footer__container ">
+                    <h3>Schedule</h3>
+                    <p>Monday : 8am - 5pm</p>
+                    <p>Friday : 9am - 6pm</p>
+                    <p>Sunday : 10am - 05pm</p>
                 </div>
-                <div class="grid-item">
-                    <div class="footer__container ">
-                        <h3>Schedule</h3>
-                        <p>Monday : 8am - 5pm</p>
-                        <p>Friday : 9am - 6pm</p>
-                        <p>Sunday : 10am - 05pm</p>
-                    </div>
-                </div>
-                <div class="grid-item">
-                    <div class="footer__container ">
-                        <h3>Contact</h3>
-                        <p>regenite@gmail.com</p>
-                        <p>Tlf: 623134212</p>
-                        <div class="footer__redes">
-                            <a href="https://www.instagram.com" target="_blank">
-                                <img src="img/logo-instagram.svg" alt="logo-instagram" class="footer__img">
-                            </a>
-                            <a href="https://www.twitter.com" target="_blank">
-                                <img src="img/logo-twitter.svg" alt="logo-twitter" class="footer__img">
-                            </a>
-                            <a href="https://www.facebook.com" target="_blank">
-                                <img src="img/facebook.svg" alt="logo-facebook" class="footer__img">
-                            </a>
-                        </div>
+            </div>
+            <div class="grid-item">
+                <div class="footer__container ">
+                    <h3>Contact</h3>
+                    <p>regenite@gmail.com</p>
+                    <p>Tlf: 623134212</p>
+                    <div class="footer__redes">
+                        <a href="https://www.instagram.com" target="_blank">
+                            <img src="img/logo-instagram.svg" alt="logo-instagram" class="footer__img">
+                        </a>
+                        <a href="https://www.twitter.com" target="_blank">
+                            <img src="img/logo-twitter.svg" alt="logo-twitter" class="footer__img">
+                        </a>
+                        <a href="https://www.facebook.com" target="_blank">
+                            <img src="img/facebook.svg" alt="logo-facebook" class="footer__img">
+                        </a>
                     </div>
                 </div>
             </div>
-            <div class="subfooter flex">
-                <span>@Copyright 2021 - Xavier Lliteras</span>
-            </div>
+        </div>
+        <div class="subfooter flex">
+            <span>@Copyright 2021 - Xavier Lliteras</span>
+        </div>
 
-        </footer>
+    </footer>
 </body>
-
-</html>
