--- a/new-3.html
+++ b/new-3.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Regenite a company with future">
     <meta property="og:description" content="We are a nonprofit organization, our goal is to investigate genetics">
     <meta property="og:image" content="img/iceland.jpg">
-    <link type="text/css" rel="stylesheet" href="css/donate.css">
+    <link type="text/css" rel="stylesheet" href="css/news.css">
     <script src="js/utilities.js" defer></script>
 </head>
 
@@ -108,86 +108,78 @@
             </div>
         </section>
 
-        <!--*********************Donation section*************************-->
-        <section class="donate padding">
-            <div class="container flex">
-                <div class="donate__decoration">
-                    <img src="img/donate.jpg" alt="donate">
-                    <div class="donate__text">
-                        <h2 class="title">Make a donation</h2>
-                        <p class="donate__paragraph">We can't thank you enough for all the donations we've been reciving, we're
-                        investing a lot of money in the development of revolutionary technology.
-                        </p>
-                        <p class="donate__paragraph">Your support will help us in our mission to investigate new technologies. Every little effort matters and with the support of everyone we can build amazing things!</p>
-                    </div>
+        <!--*********************New Section*********************-->
+        <section class="new padding">
+            <div class="container">
+                <div class="new__image">
+                    <figure>
+                        <img src="img/scientist.jpg" alt="">
+                        <figcaption>An image of a scientist</figcaption>
+                    </figure>
+                    
                 </div>
-                <form class="donate__controls flex-item">
-                    <h2 class="title donate__title"><img src="img/hand.svg" alt="">Donate</h2>
-                    <h3>I am an</h3>
-                    <div class="donate__organization flex">
-                        <button type="button" class="btn btn-primary">Individual</button>
-                        <button type="button" class="btn">Organization</button>
-                    </div>
-                    <h3>Donation amount</h3>
-                    <div class="donate__amount">
-                        <button type="button" class="btn btn-primary">5$</button>
-                        <button type="button" class="btn">10$</button>
-                        <button type="button" class="btn">20$</button>
-                        <button type="button" class="btn">50$</button>
-                        <button type="button" class="btn">100$</button>
-                        <button type="button" class="btn">250$</button>
-                        <button type="button" class="btn">500$</button>
-                        <input type="text" placeholder="Other amount" class="donate__input">
-                        <input type="submit" class="btn" value="Donate">
-                    </div>
-                </form>
+                <div class="new__text">
+                    <h2 class="title new__title">Nano carriers fit for purpose,
+                        tricking immune response with modified delivery particles</h2>
+                    <p class="first-paragraph">In collaboration with experts in Australia and Germany's Max Planck Institute for Polymer Research, Flinders University Professor of Biomedical Nanotechnology Krasimir Vasilev is testing the body's responses to various surface treatments to nanomaterials.
+                    </p>
+                    <p>This novel approach, called 'plasma polymer deposition', shows the potential to tailor the physiological responses to nanomaterials by engineering their surface chemical composition to suit a particular application.
+                    </p>
+                    <p>Nanoparticles are widely used for biomedical applications -- from vaccines to drug delivery, diagnostics and therapeutics -- usually resulting in a response of some kind by the body's innate immune cellular responses to the foreign body.
+                    </p>
+                    <p>"We are working on a wide range of nanoengineering techniques and technologies that are capable of tuning a body's immune response to nanoparticles used in medical treatments and delivery of various therapeutics in order to improve their efficacy in advanced lifesaving applications," says Matthew Flinders Professor Vasilev, from Flinders Health and Medical Research Institute at Flinders University.
+                    </p>
+                    <p>"When a foreign object enters our body, naturally the body reacts to protect itself. That's why we get scars from a cut, or an itch from a mosquito bite. Our immune system responds, even when the foreign object is much, much smaller than a splinter, in nano size.</p>
+                    <p>"Yet there are fantastic things that can be achieved using very small particles. For instance to deliver aggressive therapeutics to a cancer tumour without damaging the healthy organs around it."</p>
+                    <p>The new article published in Nanomaterials describes how the surface properties of nano objects could be intentionally modified to change the way immune cells reacted to them.</p>
+                    <p>Two chemistries induced very different responses: one triggered anti-inflammatory response, which means the nano-carrier could go un-noticed by the body and let it circulate to its intended destination. The other led to an inflammatory response, indicating this type of nanoparticle would stimulate the immune system and be suited for vaccine purposes.</p>
+                </div>
             </div>
         </section>
+    </main>
 
-        <!--FOOTER-->
-        <footer class="footer">
-            <div class="container grid">
-                <div class="grid-item">
-                    <div class="footer__container">
-                        <img src="img/logo.svg" class="footer__logo" alt="logo">
-                        <p>875 - 321 - 123</p>
-                        <p>regenite@gmail.com</p>
-                        <p>102 Carrer de sa ma, 07100</p>
-                    </div>
+     <!--FOOTER-->
+     <footer class="footer">
+        <div class="container grid">
+            <div class="grid-item">
+                <div class="footer__container">
+                    <img src="img/logo.svg" class="footer__logo" alt="logo">
+                    <p>875 - 321 - 123</p>
+                    <p>regenite@gmail.com</p>
+                    <p>102 Carrer de sa ma, 07100</p>
+                </div>
 
+            </div>
+            <div class="grid-item">
+                <div class="footer__container ">
+                    <h3>Schedule</h3>
+                    <p>Monday : 8am - 5pm</p>
+                    <p>Friday : 9am - 6pm</p>
+                    <p>Sunday : 10am - 05pm</p>
                 </div>
-                <div class="grid-item">
-                    <div class="footer__container ">
-                        <h3>Schedule</h3>
-                        <p>Monday : 8am - 5pm</p>
-                        <p>Friday : 9am - 6pm</p>
-                        <p>Sunday : 10am - 05pm</p>
-                    </div>
-                </div>
-                <div class="grid-item">
-                    <div class="footer__container ">
-                        <h3>Contact</h3>
-                        <p>regenite@gmail.com</p>
-                        <p>Tlf: 623134212</p>
-                        <div class="footer__redes">
-                            <a href="https://www.instagram.com" target="_blank">
-                                <img src="img/logo-instagram.svg" alt="logo-instagram" class="footer__img">
-                            </a>
-                            <a href="https://www.twitter.com" target="_blank">
-                                <img src="img/logo-twitter.svg" alt="logo-twitter" class="footer__img">
-                            </a>
-                            <a href="https://www.facebook.com" target="_blank">
-                                <img src="img/facebook.svg" alt="logo-facebook" class="footer__img">
-                            </a>
-                        </div>
+            </div>
+            <div class="grid-item">
+                <div class="footer__container ">
+                    <h3>Contact</h3>
+                    <p>regenite@gmail.com</p>
+                    <p>Tlf: 623134212</p>
+                    <div class="footer__redes">
+                        <a href="https://www.instagram.com" target="_blank">
+                            <img src="img/logo-instagram.svg" alt="logo-instagram" class="footer__img">
+                        </a>
+                        <a href="https://www.twitter.com" target="_blank">
+                            <img src="img/logo-twitter.svg" alt="logo-twitter" class="footer__img">
+                        </a>
+                        <a href="https://www.facebook.com" target="_blank">
+                            <img src="img/facebook.svg" alt="logo-facebook" class="footer__img">
+                        </a>
                     </div>
                 </div>
             </div>
-            <div class="subfooter flex">
-                <span>@Copyright 2021 - Xavier Lliteras</span>
-            </div>
+        </div>
+        <div class="subfooter flex">
+            <span>@Copyright 2021 - Xavier Lliteras</span>
+        </div>
 
-        </footer>
+    </footer>
 </body>
-
-</html>
