--- a/new-4.html
+++ b/new-4.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Regenite a company with future">
     <meta property="og:description" content="We are a nonprofit organization, our goal is to investigate genetics">
     <meta property="og:image" content="img/iceland.jpg">
-    <link type="text/css" rel="stylesheet" href="css/donate.css">
+    <link type="text/css" rel="stylesheet" href="css/news.css">
     <script src="js/utilities.js" defer></script>
 </head>
 
@@ -108,86 +108,76 @@
             </div>
         </section>
 
-        <!--*********************Donation section*************************-->
-        <section class="donate padding">
-            <div class="container flex">
-                <div class="donate__decoration">
-                    <img src="img/donate.jpg" alt="donate">
-                    <div class="donate__text">
-                        <h2 class="title">Make a donation</h2>
-                        <p class="donate__paragraph">We can't thank you enough for all the donations we've been reciving, we're
-                        investing a lot of money in the development of revolutionary technology.
-                        </p>
-                        <p class="donate__paragraph">Your support will help us in our mission to investigate new technologies. Every little effort matters and with the support of everyone we can build amazing things!</p>
-                    </div>
+        <!--*********************New Section*********************-->
+        <section class="new padding">
+            <div class="container">
+                <div class="new__image">
+                    <figure>
+                        <img src="img/cells.jpg" alt="">
+                        <figcaption>An image of a scientist</figcaption>
+                    </figure>
+                    
                 </div>
-                <form class="donate__controls flex-item">
-                    <h2 class="title donate__title"><img src="img/hand.svg" alt="">Donate</h2>
-                    <h3>I am an</h3>
-                    <div class="donate__organization flex">
-                        <button type="button" class="btn btn-primary">Individual</button>
-                        <button type="button" class="btn">Organization</button>
-                    </div>
-                    <h3>Donation amount</h3>
-                    <div class="donate__amount">
-                        <button type="button" class="btn btn-primary">5$</button>
-                        <button type="button" class="btn">10$</button>
-                        <button type="button" class="btn">20$</button>
-                        <button type="button" class="btn">50$</button>
-                        <button type="button" class="btn">100$</button>
-                        <button type="button" class="btn">250$</button>
-                        <button type="button" class="btn">500$</button>
-                        <input type="text" placeholder="Other amount" class="donate__input">
-                        <input type="submit" class="btn" value="Donate">
-                    </div>
-                </form>
+                <div class="new__text">
+                    <h2 class="title new__title">Scientists 'supercharge' cancer-fighting T cells</h2>
+                    <p class="first-paragraph">Yale scientists have identified a way to "supercharge" tumor-attacking T cells, a finding that may not only improve the effectiveness of a promising type of cell-based cancer immunotherapy but also expand the number of cancers it can treat.
+                    </p>
+                    <p>The discovery can advance CAR-T cell therapy, which harnesses the immune response of T cells to cancers by introducing tumor-detecting molecules into the cells. In the last decade, the U.S. Food and Drug Administration has approved six CAR-T cell therapies to treat B cell lymphomas and multiple myeloma. But despite early successes, the effectiveness of the treatment tends to diminish over time, which has launched a search for ways to boost function of T cells.
+                    </p>
+                    <p>For the new study, researchers in the lab of Sidi Chen, associate professor of genetics at Yale and senior author of the paper, devised an ingenious way to efficiently scan the genome of CD8 T cells for specific genes that might enhance the cells' ability to attack cancer cells.
+                    </p>
+                    <p>"We developed a new kind of genome-wide gain of function screen to find a molecular enzyme that acts like a foot on a gas pedal to increase metabolic activity in T cells," Chen said.
+                    </p>
+                    <p>They found high levels of activity in several genes, including PRODH2, a gene involved in cell metabolism, stimulate increased CAR-T cell activity in mouse models used to study three different types of cancers, including solid-tumor breast cancer. The findings show it is possible to produce hyper-metabolic CAR-T cells that outperform existing cell therapies, researchers say.</p>
+                    <p>Using these systems and findings, future studies can test the newly identified types of metabolically enhanced CAR-Ts in clinical settings, to identify other T cell super-chargers, and to extend cell-based immunotherapy to different cancer types, especially solid tumors, Chen said.</p>
+                    <p>Chen is affiliated with the Yale Cancer Center, the Yale Stem Cell Center, the Yale Center for Biomedical Data Science, and the Systems Biology Institute and Center for Cancer Systems Biology at Yale's West Campus.</p>
+                </div>
             </div>
         </section>
+    </main>
 
-        <!--FOOTER-->
-        <footer class="footer">
-            <div class="container grid">
-                <div class="grid-item">
-                    <div class="footer__container">
-                        <img src="img/logo.svg" class="footer__logo" alt="logo">
-                        <p>875 - 321 - 123</p>
-                        <p>regenite@gmail.com</p>
-                        <p>102 Carrer de sa ma, 07100</p>
-                    </div>
+     <!--FOOTER-->
+     <footer class="footer">
+        <div class="container grid">
+            <div class="grid-item">
+                <div class="footer__container">
+                    <img src="img/logo.svg" class="footer__logo" alt="logo">
+                    <p>875 - 321 - 123</p>
+                    <p>regenite@gmail.com</p>
+                    <p>102 Carrer de sa ma, 07100</p>
+                </div>
 
+            </div>
+            <div class="grid-item">
+                <div class="footer__container ">
+                    <h3>Schedule</h3>
+                    <p>Monday : 8am - 5pm</p>
+                    <p>Friday : 9am - 6pm</p>
+                    <p>Sunday : 10am - 05pm</p>
                 </div>
-                <div class="grid-item">
-                    <div class="footer__container ">
-                        <h3>Schedule</h3>
-                        <p>Monday : 8am - 5pm</p>
-                        <p>Friday : 9am - 6pm</p>
-                        <p>Sunday : 10am - 05pm</p>
-                    </div>
-                </div>
-                <div class="grid-item">
-                    <div class="footer__container ">
-                        <h3>Contact</h3>
-                        <p>regenite@gmail.com</p>
-                        <p>Tlf: 623134212</p>
-                        <div class="footer__redes">
-                            <a href="https://www.instagram.com" target="_blank">
-                                <img src="img/logo-instagram.svg" alt="logo-instagram" class="footer__img">
-                            </a>
-                            <a href="https://www.twitter.com" target="_blank">
-                                <img src="img/logo-twitter.svg" alt="logo-twitter" class="footer__img">
-                            </a>
-                            <a href="https://www.facebook.com" target="_blank">
-                                <img src="img/facebook.svg" alt="logo-facebook" class="footer__img">
-                            </a>
-                        </div>
+            </div>
+            <div class="grid-item">
+                <div class="footer__container ">
+                    <h3>Contact</h3>
+                    <p>regenite@gmail.com</p>
+                    <p>Tlf: 623134212</p>
+                    <div class="footer__redes">
+                        <a href="https://www.instagram.com" target="_blank">
+                            <img src="img/logo-instagram.svg" alt="logo-instagram" class="footer__img">
+                        </a>
+                        <a href="https://www.twitter.com" target="_blank">
+                            <img src="img/logo-twitter.svg" alt="logo-twitter" class="footer__img">
+                        </a>
+                        <a href="https://www.facebook.com" target="_blank">
+                            <img src="img/facebook.svg" alt="logo-facebook" class="footer__img">
+                        </a>
                     </div>
                 </div>
             </div>
-            <div class="subfooter flex">
-                <span>@Copyright 2021 - Xavier Lliteras</span>
-            </div>
+        </div>
+        <div class="subfooter flex">
+            <span>@Copyright 2021 - Xavier Lliteras</span>
+        </div>
 
-        </footer>
+    </footer>
 </body>
-
-</html>
