--- a/new-7.html
+++ b/new-7.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Regenite a company with future">
     <meta property="og:description" content="We are a nonprofit organization, our goal is to investigate genetics">
     <meta property="og:image" content="img/iceland.jpg">
-    <link type="text/css" rel="stylesheet" href="css/donate.css">
+    <link type="text/css" rel="stylesheet" href="css/news.css">
     <script src="js/utilities.js" defer></script>
 </head>
 
@@ -108,86 +108,78 @@
             </div>
         </section>
 
-        <!--*********************Donation section*************************-->
-        <section class="donate padding">
-            <div class="container flex">
-                <div class="donate__decoration">
-                    <img src="img/donate.jpg" alt="donate">
-                    <div class="donate__text">
-                        <h2 class="title">Make a donation</h2>
-                        <p class="donate__paragraph">We can't thank you enough for all the donations we've been reciving, we're
-                        investing a lot of money in the development of revolutionary technology.
-                        </p>
-                        <p class="donate__paragraph">Your support will help us in our mission to investigate new technologies. Every little effort matters and with the support of everyone we can build amazing things!</p>
-                    </div>
+        <!--*********************New Section*********************-->
+        <section class="new padding">
+            <div class="container">
+                <div class="new__image">
+                    <figure>
+                        <img src="img/carousel_2.jpg" alt="">
+                        <figcaption>An image of a virus</figcaption>
+                    </figure>
+                    
                 </div>
-                <form class="donate__controls flex-item">
-                    <h2 class="title donate__title"><img src="img/hand.svg" alt="">Donate</h2>
-                    <h3>I am an</h3>
-                    <div class="donate__organization flex">
-                        <button type="button" class="btn btn-primary">Individual</button>
-                        <button type="button" class="btn">Organization</button>
-                    </div>
-                    <h3>Donation amount</h3>
-                    <div class="donate__amount">
-                        <button type="button" class="btn btn-primary">5$</button>
-                        <button type="button" class="btn">10$</button>
-                        <button type="button" class="btn">20$</button>
-                        <button type="button" class="btn">50$</button>
-                        <button type="button" class="btn">100$</button>
-                        <button type="button" class="btn">250$</button>
-                        <button type="button" class="btn">500$</button>
-                        <input type="text" placeholder="Other amount" class="donate__input">
-                        <input type="submit" class="btn" value="Donate">
-                    </div>
-                </form>
+                <div class="new__text">
+                    <h2 class="title new__title">Oncolytic Virus Therapy: Using Tumor-Targeting Viruses to Treat Cancer </h2>
+                    <p class="first-paragraph">For more than a century, doctors have been interested in using viruses to treat cancer, and in recent years a small but growing number of patients have begun to benefit from this approach.
+
+                        Some viruses tend to infect and kill tumor cells. Known as oncolytic viruses, this group includes viruses found in nature as well as viruses modified in the laboratory to reproduce efficiently in cancer cells without harming healthy cells.
+                    </p>
+                    <p>To date, only one oncolytic virus—a genetically modified form of a herpesvirus for treating melanoma—has been approved by the Food and Drug Administration (FDA), though a number of viruses are being evaluated as potential treatments for cancer in clinical trials.
+                    </p>
+                    <p>Oncolytic viruses have long been viewed as tools for directly killing cancer cells. But a growing body of research suggests that some oncolytic viruses may work—at least in part—by triggering an immune response in the body against the cancer.
+                    </p>
+                    <p>When a virus infects a tumor cell, the virus makes copies of itself until the cell bursts. The dying cancer cell releases materials, such as tumor antigens, that allow the cancer to be recognized, or “seen,” by the immune system.
+                    </p>
+                    <p>“Oncolytic viruses are alerting the immune system that something’s wrong,” said Jason Chesney, M.D., Ph.D., director of the University of Louisville’s James Graham Brown Cancer Center. This can lead to an immune response against nearby tumor cells (a local response) or tumor cells in other parts of the body (a systemic response).
+
+                        For this reason, some researchers consider oncolytic viruses to be a form of immunotherapy—a treatment that harnesses the immune system against cancer. But many in the field would agree that more studies are needed to learn how different oncolytic viruses work against cancer.</p>
+                </div>
             </div>
         </section>
+    </main>
 
-        <!--FOOTER-->
-        <footer class="footer">
-            <div class="container grid">
-                <div class="grid-item">
-                    <div class="footer__container">
-                        <img src="img/logo.svg" class="footer__logo" alt="logo">
-                        <p>875 - 321 - 123</p>
-                        <p>regenite@gmail.com</p>
-                        <p>102 Carrer de sa ma, 07100</p>
-                    </div>
+     <!--FOOTER-->
+     <footer class="footer">
+        <div class="container grid">
+            <div class="grid-item">
+                <div class="footer__container">
+                    <img src="img/logo.svg" class="footer__logo" alt="logo">
+                    <p>875 - 321 - 123</p>
+                    <p>regenite@gmail.com</p>
+                    <p>102 Carrer de sa ma, 07100</p>
+                </div>
 
+            </div>
+            <div class="grid-item">
+                <div class="footer__container ">
+                    <h3>Schedule</h3>
+                    <p>Monday : 8am - 5pm</p>
+                    <p>Friday : 9am - 6pm</p>
+                    <p>Sunday : 10am - 05pm</p>
                 </div>
-                <div class="grid-item">
-                    <div class="footer__container ">
-                        <h3>Schedule</h3>
-                        <p>Monday : 8am - 5pm</p>
-                        <p>Friday : 9am - 6pm</p>
-                        <p>Sunday : 10am - 05pm</p>
-                    </div>
-                </div>
-                <div class="grid-item">
-                    <div class="footer__container ">
-                        <h3>Contact</h3>
-                        <p>regenite@gmail.com</p>
-                        <p>Tlf: 623134212</p>
-                        <div class="footer__redes">
-                            <a href="https://www.instagram.com" target="_blank">
-                                <img src="img/logo-instagram.svg" alt="logo-instagram" class="footer__img">
-                            </a>
-                            <a href="https://www.twitter.com" target="_blank">
-                                <img src="img/logo-twitter.svg" alt="logo-twitter" class="footer__img">
-                            </a>
-                            <a href="https://www.facebook.com" target="_blank">
-                                <img src="img/facebook.svg" alt="logo-facebook" class="footer__img">
-                            </a>
-                        </div>
+            </div>
+            <div class="grid-item">
+                <div class="footer__container ">
+                    <h3>Contact</h3>
+                    <p>regenite@gmail.com</p>
+                    <p>Tlf: 623134212</p>
+                    <div class="footer__redes">
+                        <a href="https://www.instagram.com" target="_blank">
+                            <img src="img/logo-instagram.svg" alt="logo-instagram" class="footer__img">
+                        </a>
+                        <a href="https://www.twitter.com" target="_blank">
+                            <img src="img/logo-twitter.svg" alt="logo-twitter" class="footer__img">
+                        </a>
+                        <a href="https://www.facebook.com" target="_blank">
+                            <img src="img/facebook.svg" alt="logo-facebook" class="footer__img">
+                        </a>
                     </div>
                 </div>
             </div>
-            <div class="subfooter flex">
-                <span>@Copyright 2021 - Xavier Lliteras</span>
-            </div>
+        </div>
+        <div class="subfooter flex">
+            <span>@Copyright 2021 - Xavier Lliteras</span>
+        </div>
 
-        </footer>
+    </footer>
 </body>
-
-</html>
